crates/ty_python_semantic/resources/mdtest/snapshots/liskov.md_-_The_Liskov_Substitut…_-_Method_return_types_(3e0c19bed14cfacd).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: liskov.md - The Liskov Substitution Principle - Method return types
mdtest path: crates/ty_python_semantic/resources/mdtest/liskov.md
---

# Python source files

## mdtest_snippet.pyi

```
 1 | class Super:
 2 |     def method(self) -> int: ...
 3 | 
 4 | class Sub1(Super):
 5 |     def method(self) -> int: ...  # fine
 6 | 
 7 | class Sub2(Super):
 8 |     def method(self) -> bool: ...  # fine: `bool` is a subtype of `int`
 9 | 
10 | class Sub3(Super):
11 |     def method(self) -> object: ...  # error: [invalid-method-override]
12 | 
13 | class Sub4(Super):
14 |     def method(self) -> str: ...  # error: [invalid-method-override]
15 | from typing import Generic, TypeVar, Union
16 | 
17 | class Root: ...
18 | 
19 | class Base:
20 |     def get_parent_id(self) -> Union["Base", Root]: ...
21 | 
22 | PT = TypeVar("PT", bound=Union[Base, Root])
23 | 
24 | class Child(Base, Generic[PT]):
25 |     parent_id: PT
26 | 
27 |     def get_parent_id(self) -> PT: ...
28 | 
29 | class DataArray: ...
30 | 
31 | class Coordinates:
32 |     def __getitem__(self, key: object) -> DataArray: ...
33 | 
34 | T_DataArray = TypeVar("T_DataArray", bound=DataArray)
35 | 
36 | class DataArrayCoordinates(Coordinates, Generic[T_DataArray]):
37 |     def __getitem__(self, key: object) -> T_DataArray: ...
```

# Diagnostics

```
error[invalid-method-override]: Invalid override of method `method`
  --> src/mdtest_snippet.pyi:11:9
   |
10 | class Sub3(Super):
11 |     def method(self) -> object: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Super.method`
12 |
13 | class Sub4(Super):
   |
  ::: src/mdtest_snippet.pyi:2:9
   |
 1 | class Super:
 2 |     def method(self) -> int: ...
   |         ------------------- `Super.method` defined here
 3 |
 4 | class Sub1(Super):
   |
info: This violates the Liskov Substitution Principle

```

```
error[invalid-method-override]: Invalid override of method `method`
  --> src/mdtest_snippet.pyi:14:9
   |
13 | class Sub4(Super):
14 |     def method(self) -> str: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Super.method`
15 | from typing import Generic, TypeVar, Union
   |
  ::: src/mdtest_snippet.pyi:2:9
   |
 1 | class Super:
 2 |     def method(self) -> int: ...
   |         ------------------- `Super.method` defined here
 3 |
 4 | class Sub1(Super):
   |
info: This violates the Liskov Substitution Principle

```
